--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
         /* This rule loads the font for the LIVE WEBPAGE using a relative path */
         @font-face {
             font-family: 'Oswald';
-            src: url('./fonts/Oswald-Regular.ttf') format('truetype');
+            src: url('https://theocochrane.github.io/Fifa-style-Gym-Card/fonts/Oswald-Regular.ttf') format('truetype');
             font-weight: 400;
             font-style: normal;
         }
         @font-face {
             font-family: 'Oswald';
-            src: url('./fonts/Oswald-Bold.ttf') format('truetype');
+            src: url('https://theocochrane.github.io/Fifa-style-Gym-Card/fonts/Oswald-Bold.ttf') format('truetype');
             font-weight: 700;
             font-style: normal;
         }
