--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         }
         function zScoreToPercentile(z) { return 0.5 * (1 + erf(z / Math.sqrt(2))); }
         function calculateScore(value, standard) {
-            if (isNaN(value) || value === null) return 30;
+            if (isNaN(value) || value === null) return "--";
             let zScore = (value - standard.mean) / standard.sd;
             if (!standard.higherIsBetter) zScore = -zScore;
             zScore = Math.max(-3, Math.min(3, zScore));
@@ -328,7 +328,7 @@
 
             const getAverage = (arr) => {
                 const validScores = arr.filter(score => !isNaN(score));
-                if (validScores.length === 0) return 30;
+                if (validScores.length === 0) return "--";
                 return Math.round(validScores.reduce((a, b) => a + b, 0) / validScores.length);
             };
             
