--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
             setText('text-date', cardData.date);
             setText('text-overall', cardData.overall);
             setText('text-gender', cardData.gender.toUpperCase());
-            setText('text-surname', cardData.name.toUpperCase() || 'SURNAME');
+            setText('text-surname', cardData.name.toUpperCase() || '--------');
             
             setText('text-crd-score', cardData.crd);
             setText('text-str-score', cardData.str);
@@ -350,8 +350,8 @@
             const cardData = {
                 ...categoryScores,
                 name: dom.name.value,
-                gender: gender.substring(0, 1),
-                overall: isInitial ? "00" : Math.round(weightedOverall),
+                gender: isInitial ? "-" : gender.substring(0, 1),
+                overall: isInitial ? "--" : Math.round(weightedOverall),
                 date: `${String(today.getDate()).padStart(2, '0')}/${String(today.getMonth() + 1).padStart(2, '0')}/${today.getFullYear()}`,
                 portraitImageSrc: loadedPortraitImage ? loadedPortraitImage.src : ''
             };
