--- a/index.html
+++ b/index.html
@@ -131,29 +131,28 @@
     <div class="container">
         <!-- USER INPUT FORM SECTION -->
         <div class="form-section">
-                        <h1>Gym Card Generator</h1>
-
+            <h1>Gym Card Generator</h1>
             <!-- ============================================= -->
             <!-- === COPY AND PASTE THIS INSTRUCTION PANEL === -->
             <div class="instructions-panel">
                 <h4>Welcome! How to create your card:</h4>
                 <ol>
                     <li>
-                        <strong>Fill in Your Details:</strong> Your <strong>Gender</strong> and <strong>Bodyweight</strong> are required for accurate scores. You can also upload a portrait image!
+                        Fill in Your Details: Your Gender and Bodyweight are required for accurate scores. You can also upload a portrait image!
                     </li>
                     <li>
-                        <strong>Enter Exercise Scores:</strong> You must fill in <strong>all</strong> exercise fields to calculate your final Overall Rating.
+                        Enter Exercise Scores: To get an Overall Rating, fill in all exercises. To get a score for just one category (e.g., 'Pace'), just complete all exercises within that specific category.
                     </li>
                     <li>
-                        <strong>Generate & Download:</strong> Click "Generate Card" to see your results, then use the download button to save it as a PNG.
+                        Generate & Download: Click "Generate Card" to see your results, then use the download button to save it as a PNG.
                     </li>
                 </ol>
-
+            
                 <h4>Understanding Your Scores</h4>
                 <ul>
-                    <li>Your score (01-99) is a <strong>percentile rank</strong> based on norms for young adults. A score of 50 means you performed better than 50% of people in that group.</li>
-                    <li>These scores are a fun guide, not a perfect science! Use them to track your own progress or for a friendly competition with friends.</li>
-                    <li>The <strong>Overall Rating</strong> is a weighted average of all categories. Enjoy!</li>
+                    <li>Your score (01-99) is a percentile rank based on norms for young adults. A score of 50 means you performed better than 50% of people in that group.</li>
+                    <li>These scores are a fun guide, not a perfect science! Use them to track your own progress or for a fun competition with friends.</li>
+                    <li>The Overall Rating is a weighted average of all categories. Enjoy!</li>
                 </ul>
             </div>
             <!-- ============================================= -->
